Fix scrollbar (#337)
* fix scrollbar

* fix: style for datacenters items on set-datacenters

--- a/src/app/wizard/set-datacenter/set-datacenter.component.scss
+++ b/src/app/wizard/set-datacenter/set-datacenter.component.scss
@@ -49,7 +49,7 @@ $wizard-box-content-dc-margin-top: 0px;
 }
 
 .wizard-box {
-  margin: 5px;
+  margin: 7.5px;
   background: #fff;
   border: 1px solid #E3E8EC;
   cursor: pointer;
